restructure the project-directory as a Maven web application

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ ConnectorVersion.java
 .settings/
 target/
 irods-connector/irods
+jargon-modeshape-webdav/nb-configuration.xml
 
 *.pydevproject
 .metadata
