--- a/jargon-modeshape-webdav/pom.xml
+++ b/jargon-modeshape-webdav/pom.xml
@@ -6,12 +6,51 @@
 	<parent>
 		<artifactId>jargon-modeshape</artifactId>
 		<groupId>org.irods.jargon</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0.9.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>jargon-modeshape-webdav</artifactId>
 	<packaging>war</packaging>
 	<name>jargon-modeshape-webdav adaptor</name>
 	<url>http://maven.apache.org</url>
+	
+	<properties>
+        
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+
+        <!-- Maven plugin versions -->
+        <version.assembly.plugin>2.4</version.assembly.plugin>
+        <version.clean.plugin>2.5</version.clean.plugin>
+        <version.compiler.plugin>3.0</version.compiler.plugin>
+        <version.dependency.plugin>2.6</version.dependency.plugin>
+        <version.install.plugin>2.4</version.install.plugin>
+        <version.jar.plugin>2.4</version.jar.plugin>
+        <version.resources.plugin>2.6</version.resources.plugin>
+        <version.surefire.plugin>2.12.3</version.surefire.plugin>
+        <version.war.plugin>2.3</version.war.plugin>
+        
+	</properties>
+
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.modeshape.bom</groupId>
+                <artifactId>modeshape-bom-embedded</artifactId>
+                <version>${modeshape.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            
+            
+            
+            
+            
+            
+        </dependencies>
+    </dependencyManagement>
+
 
 	<dependencies>
 		<dependency>
@@ -19,7 +58,7 @@
 			<artifactId>irods-connector</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.modeshape</groupId>
 			<artifactId>modeshape-webdav</artifactId>
 			<version>${modeshape.version}</version>
@@ -30,19 +69,29 @@
 		</dependency>
 		<dependency>
 			<groupId>org.modeshape</groupId>
-			<artifactId>modeshape-web-jcr</artifactId>  <!-- yep -->
+			<artifactId>modeshape-web-jcr</artifactId>   yep 
 			<version>${modeshape.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.modeshape</groupId>
-			<artifactId>modeshape-web-jcr-webdav</artifactId> <!-- yep -->
+			<artifactId>modeshape-web-jcr-webdav</artifactId>  yep 
 			<version>${modeshape.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.modeshape</groupId>
 			<artifactId>modeshape-jcr</artifactId>
-		</dependency>
+		</dependency>-->
+        
+        
+        <dependency>
+            <groupId>org.modeshape</groupId>
+            <artifactId>modeshape-web-jcr-webdav-war</artifactId>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        
+        
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
@@ -50,23 +99,96 @@
 	</dependencies>
 
 	<build>
+        
+        <finalName>${project.artifactId}</finalName>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>${version.assembly.plugin}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>${version.clean.plugin}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${version.compiler.plugin}</version>
+                    <configuration>
+                        <showDeprecation>false</showDeprecation>
+                        <showWarnings>false</showWarnings>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${version.dependency.plugin}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>${version.install.plugin}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${version.jar.plugin}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${version.resources.plugin}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${version.surefire.plugin}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>${version.war.plugin}</version>
+                    <configuration>
+                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        
+        
 		<plugins>
-			<plugin>
+<!--			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
-			</plugin>
-			<plugin>
+			</plugin>-->
+<!--			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.3</version>
-				<configuration>
-					<warSourceDirectory>WebContent</warSourceDirectory>
-					<failOnMissingWebXml>true</failOnMissingWebXml>
-				</configuration>
-			</plugin>
+                    <configuration>
+                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                    </configuration>
+                
+                
+			</plugin>-->
+            
+            
+            <plugin>
+                <!--Exclude the default repo JSON config-->
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <overlays>
+                        <overlay>
+                            <id>exclude-default-config</id>
+                            <groupId>org.modeshape</groupId>
+                            <artifactId>modeshape-web-jcr-webdav-war</artifactId>
+                            <excludes>
+                                <exclude>**/*.json</exclude>
+                            </excludes>
+                        </overlay>
+                    </overlays>
+                </configuration>
+            </plugin>
+            
+            
 		</plugins>
 	</build>
 </project>
